# PawBae-app

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  README.zh.md  REFACTOR-PLAN.md  ROADMAP.md  ROADMAP_HUMAN.md  biome.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-analyzer.toml  start.command  tsconfig.json  vite.config.js  vitest.config.ts
.github/workflows/: ci.yml  cloud-deploy.yml  cloud.yml  release.yml  website.yml
.omx/logs/: ledger.json
.omx/sessions/: current.json
apps/desktop/: .env.example  package.json  vite.config.js  vitest.config.ts
apps/website/: .env.example  README.md  package.json  pnpm-lock.yaml
docs/: DEPLOYING-CLOUD.md  HANDOFF.md  RELEASING.md  V1-MANUAL-ACCEPTANCE.md  voice-agent-design.md  voice-interaction-design.md
docs/lore/: yoonie.md
docs/skins/: SKIN-SPEC.en.md  SKIN-SPEC.zh.md
docs/strategy/: 2026-07-07-startup-strategy.md  2026-07-09-platform-vision.md  2026-07-09-v1-release-plan.md  2026-07-22-v1-completion-plan.md
frontend/: package-lock.json  package.json  pnpm-lock.yaml
scripts/: bump-version.mjs  validate-pet-assets.mjs  w6-supabase-integration.sh  w9-recovery-matrix.sh
src/: App.svelte  StageApp.svelte  main.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  agent_gateway.rs  app_init.rs  asset.rs  cursor.rs  jsonl_paths.rs  lib.rs  lsof.rs  main.rs  mascot.rs  pet.rs  pet_core.rs  session_watcher.rs  setup.rs  socket.rs  speech.rs  ssh.rs  ssh_core.rs  state.rs  terminal.rs  tray.rs
src-tauri/src/commands/: agent.rs  codex_pet.rs  hook.rs  media.rs  misc.rs  mod.rs  pet.rs  session.rs  ssh.rs  update.rs  window.rs
src-tauri/src/commands/agent/: control.rs  discovery.rs  gateway.rs  metrics.rs
src-tauri/src/commands/hook/: cursor_install.rs  event_process.rs
src-tauri/src/commands/session/: agent_sessions.rs  claude_sessions.rs  helpers.rs
src-tauri/src/commands/window/: expansion.rs  lifecycle.rs  mod.rs  positioning.rs
src-tauri/src/input/: aggregator.rs  mod.rs
src-tauri/src/platform/: common.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/platform/macos/: drag.rs  interaction.rs  media.rs  mod.rs  screen.rs  terminal.rs
src-tauri/src/speech/: macos.rs  mod.rs  windows.rs
supabase/: .env.example  README.md  config.toml
(+381 files in other folders)
