[package]
name = "pawbae-app"
version = "0.2.0"
description = "PawBae Desktop Pet"
authors = ["PawBae"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "pawbae_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-aptabase = "1.0"
tauri-plugin-clipboard-manager = "2"
base64 = "0.22"
chrono = "0.4"
dirs = "5"
percent-encoding = "2"

[target.'cfg(target_os = "macos")'.dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
libc = "0.2"
objc2 = "0.6"
block2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSScreen", "NSApplication", "NSRunningApplication"] }
objc2-foundation = { version = "0.3", features = ["NSGeometry", "NSArray"] }
objc2-speech = { version = "0.3", features = ["SFSpeechRecognizer", "SFSpeechRecognitionTask", "SFSpeechRecognitionRequest", "SFSpeechRecognitionResult", "SFTranscription"] }
objc2-avf-audio = { version = "0.3", features = ["AVAudioEngine", "AVAudioNode", "AVAudioIONode", "AVAudioFormat", "AVAudioBuffer", "AVAudioTypes"] }
notify = { version = "6", default-features = false, features = ["macos_kqueue"] }

[target.'cfg(target_os = "windows")'.dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
notify = { version = "6" }
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_Media_Audio", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_Console", "Win32_Graphics_Gdi", "Media_Control", "Media_SpeechRecognition", "Globalization", "Foundation", "Foundation_Collections"] }

[target.'cfg(not(any(target_os = "macos", target_os = "windows")))'.dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
notify = { version = "6" }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
